XMLExper/m12/m12_344_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual char* tinyxml2::XMLNode::ParseDeep(char*, tinyxml2::StrPair*, int*)’:
tinyxml2.cpp:1112:82: error: lvalue required as unary ‘&’ operand
 1112 |         p = _document->Identify( p, &/*PCI*/dynamic_cast<tinyxml2::XMLText*>(node), first );
      |                                                                                  ^
diff: tinyxml2.S: No such file or directory
